BMC IP changed to BMC host/IP and corrected the value truncation in webgui.
Resolves openbmc/openbmc#2894

Tested: Running GUI locally and verified the new texts. Also made sure that
value truncation is not happening.

--- a/app/common/styles/layout/header.scss
+++ b/app/common/styles/layout/header.scss
@@ -64,7 +64,7 @@ header {
     padding: .4em 0 0 1em;
     height: 100%;
     background: transparent;
-    max-width: 350px;
+    max-width: 600px;
     white-space: nowrap;
     overflow: hidden;
     .header__hostname {
